FPLA-1754: Further refactor of notice of proceedings event